# sample-openmp-in-cuda

./: .gitignore  Makefile  README.md  main.cu  meson.build  utils.cu  utils.h
